unpackaged/main/default/objects/GC_Report_Filters__c/GC_Report_Filters__c.object-meta.xml
<CustomObject>
    <label>GC Report Filter</label>
    <nameField>
        <displayFormat>GC_RF_{00000}</displayFormat>
        <label>GC Report Filters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GC Report Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>