unpackaged/main/default/objects/GC_Report_Filters__c/fields/Area_Description__c.field-meta.xml
<CustomField>
    <fullName>Area_Description__c</fullName>
    <label>Area Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>