unpackaged/main/default/objects/GC_Report_Filters__c/fields/Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Time__c</fullName>
    <label>Completion Date/Time</label>
    <type>Date</type>
</CustomField>