unpackaged/main/default/objects/GC_Report_Filters__c/fields/Creation_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_From__c</fullName>
    <label>Creation Date From</label>
    <type>Date</type>
</CustomField>