unpackaged/main/default/objects/GC_Report_Filters__c/fields/Creation_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_To__c</fullName>
    <label>Creation Date To</label>
    <type>Date</type>
</CustomField>