unpackaged/main/default/objects/GC_Report_Filters__c/fields/Delivery_Area__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Area__c</fullName>
    <label>Delivery Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>