unpackaged/main/default/objects/GC_Report_Filters__c/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <label>Delivery Date/Time</label>
    <type>Date</type>
</CustomField>