unpackaged/main/default/objects/GC_Report_Filters__c/fields/Keyword_Search__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Search__c</fullName>
    <label>Keyword Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>