unpackaged/main/default/objects/GC_Report_Filters__c/fields/Modified_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_From__c</fullName>
    <label>Modified Date From</label>
    <type>Date</type>
</CustomField>