unpackaged/main/default/objects/GC_Report_Filters__c/fields/Modified_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_To__c</fullName>
    <label>Modified Date To</label>
    <type>Date</type>
</CustomField>