unpackaged/main/default/objects/GC_Report_Filters__c/fields/Onsite_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person__c</fullName>
    <label>Onsite Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>