unpackaged/main/default/objects/GC_Report_Filters__c/fields/Onsite_Contact_Person_Other__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Person_Other__c</fullName>
    <label>Onsite Contact Person Other</label>
    <length>225</length>
    <type>Text</type>
</CustomField>