unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>OP_Area_Description__c</fullName>
    <label>OP_Area Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>