unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OP_Completion_Date_Time__c</fullName>
    <label>OP_Completion Date/Time</label>
    <type>Date</type>
</CustomField>