unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Creation_Date_To__c.field-meta.xml
<CustomField>
    <fullName>OP_Creation_Date_To__c</fullName>
    <label>OP_Creation Date To</label>
    <type>Date</type>
</CustomField>