unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Delivery_Area__c.field-meta.xml
<CustomField>
    <fullName>OP_Delivery_Area__c</fullName>
    <label>OP_Delivery Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>