unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OP_Delivery_Date_Time__c</fullName>
    <label>OP_Delivery Date/Time</label>
    <type>Date</type>
</CustomField>