unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Department__c.field-meta.xml
<CustomField>
    <fullName>OP_Department__c</fullName>
    <label>OP_Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>