unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Keyword_Search__c.field-meta.xml
<CustomField>
    <fullName>OP_Keyword_Search__c</fullName>
    <label>OP_Keyword Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>