unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Modified_Date_From__c.field-meta.xml
<CustomField>
    <fullName>OP_Modified_Date_From__c</fullName>
    <label>OP_Modified Date From</label>
    <type>Date</type>
</CustomField>