unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Onsite_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>OP_Onsite_Contact_Person__c</fullName>
    <label>OP Onsite Contact Person</label>
    <length>225</length>
    <type>Text</type>
</CustomField>