unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Removal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OP_Removal_Date_Time__c</fullName>
    <label>OP_Removal Date/Time</label>
    <type>Date</type>
</CustomField>