unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_User_Name__c.field-meta.xml
<CustomField>
    <fullName>OP_User_Name__c</fullName>
    <label>OP_User Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>