unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Vendor__c.field-meta.xml
<CustomField>
    <fullName>OP_Vendor__c</fullName>
    <label>OP_Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>