unpackaged/main/default/objects/GC_Report_Filters__c/fields/OP_Venue_Location__c.field-meta.xml
<CustomField>
    <fullName>OP_Venue_Location__c</fullName>
    <label>OP_Venue Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>