unpackaged/main/default/objects/GC_Report_Filters__c/fields/Removal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_Time__c</fullName>
    <label>Removal Date/Time</label>
    <type>Date</type>
</CustomField>