unpackaged/main/default/objects/GC_Report_Filters__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>